2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile: Remove bashism (Bertalan Fodor).

	* cygwin/mknetrel (preinstall): Set webdir (Bertalan Fodor).

2003-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/postinstall-lilypond.sh: 
	* cygwin/postremove-lilypond.sh: Bugfix for fonts remove command
	(Volker Zell).

2003-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (run_dvips): use -Ppdf for preview.

	* VERSION: release 2.0.1

	* lily/bezier.cc (get_other_coordinate): change assert into
	warning.

	* lily/note-head.cc (internal_brew_molecule): make left protusion
	smaller, to accomodate for natural sign.
	(internal_brew_molecule): only do this when the accidental is
	close enough.
	(extent): new function

	* lily/skyline.cc (merge_skyline): new function
	(heighten_skyline): new function

	* lily/accidental-placement.cc (position_accidentals) 
	(position_accidentals): fix todo.

2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/+.ly (texidoc): put version number inline.

	* GNUmakefile.in: remove rsync-web target.
	
	* input/regression/bar-scripts.ly (onestaff): raggedright

v/pri2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove #if 0'd code in couple of places.

	* lily/midi-stream.cc (operator <<): rewrite.

	* lily/note-head.cc (internal_brew_molecule): 
	only make ledgers when the Staff symbol has lines.

	* ly/property-init.ly (arpeggioBracket): simplify

	* lily/translator-group.cc (execute_pushpop_property): use
	SCM_EQ_P for comparing keys. This fixes reverting
	auto-beam-settings.

2003-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/midi-stream.cc (operator <<): Also write MIDI string when
	midi_debug_global_b.
	(operator <<): Normalise loop.

2003-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (escape_path): revise.

	* scm/music-functions.scm (set-output-property): new function.
	
2003-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>
