@@ -1,5 +1,10 @@
 2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* cygwin/lily-wins.py: Check whether to run ly2dvi or lilypond.
+
+	* stepmake/stepmake/topdocs-targets.make (copy-to-top): Do not
+	try to copy *png, index.html (Bertalan Fodor).
+
 	* Documentation/user/GNUmakefile: Remove bashism (Bertalan Fodor).
 
 	* cygwin/mknetrel (preinstall): Set webdir (Bertalan Fodor).
